# home-assistant-victoria-metrics-exporter

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  conductor.json  hacs.json  pyproject.toml  requirements_dev.txt
.claude/commands/: render-icon.md
.github/workflows/: ci.yml
custom_components/victoria_metrics/: __init__.py  attributes.py  config_flow.py  const.py  manifest.json  panel.py  reader.py  sensor.py  strings.json  switch.py  websocket.py  writer.py
custom_components/victoria_metrics/translations/: en.json
custom_components/victoria_metrics/www/: victoria-metrics-more-info.js  victoria-metrics-panel.js
